--- a/ChallengeCountries/Base.lproj/Main.storyboard
+++ b/ChallengeCountries/Base.lproj/Main.storyboard
@@ -320,7 +320,7 @@
         <!--Navigation Controller-->
         <scene sceneID="Lzy-hr-3eD">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wT9-Ne-gdc" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wT9-Ne-gdc" customClass="NavigationController" customModule="ChallengeCountries" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hIW-YO-25M">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
